--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -21,6 +21,7 @@
             android:layout_toLeftOf="@+id/iv_search"
             android:hint="Location"
             android:maxLines="1"
+            android:inputType="text"
             android:textColor="@android:color/white"
             android:textColorHint="#80FFFFFF"
             app:backgroundTint="@android:color/white" />
